# rosbim

./: .clang-format  .gitignore  LICENCE  README.md  environment.sh
bim_interface/: CMakeLists.txt  ReadMe.md  package.xml
bim_interface/bim_interface/: backend.py  bim_interface.py  mesh_format.py  plugin_base.py  plugin_manager.py
bim_interface/bim_interface/backends/ifcopenshell/: export_geometry_impl.py  export_map_impl.py  ifcopenshell.py
docker/: Dockerfile.app  Dockerfile.base  aliases.sh  docker-compose-app.yml  docker-compose-base.yml
rosbim/: CMakeLists.txt  package.xml
rosbim/doc/: CodeDesign.md  Contributing.md  Structure.md
rosbim_example_models/: CMakeLists.txt  ReadMe.md  package.xml
rosbim_example_models/config/: map_server.yaml  rosbim.rviz
rosbim_example_models/launch/: crane_hall_v10.launch.py
rosbim_example_models/models/: Crane_Hall_CONCERT_movable_wall.ifc  crane_hall_v10.ifc
rosbim_manager/: CMakeLists.txt  ReadMe.md  package.xml
rosbim_manager/doc/: ReadMe.md
rosbim_manager/launch/: rosbim_manager.launch.py
rosbim_manager/rosbim_manager/: __init__.py  rosbim_manager.py  spawner.py
rosbim_manager_msgs/: CMakeLists.txt  ReadMe.md  package.xml
rosbim_manager_msgs/msg/: Plugin.msg  PluginState.msg
rosbim_manager_msgs/srv/: ListPlugins.srv  LoadBimFile.srv  LoadPlugin.srv  SpawnPlugin.srv  StartPlugin.srv  StopPlugin.srv  SwitchBackend.srv  UnloadPlugin.srv
rosbim_plugins/: ReadMe.md
rosbim_plugins/rosbim_demo_plugin/: CMakeLists.txt  ReadMe.md  package.xml
rosbim_plugins/rosbim_demo_plugin/config/: other_topics.yaml  topics.yaml
rosbim_plugins/rosbim_demo_plugin/src/rosbim_demo_plugin/: demo_plugin.py
rosbim_plugins/rosbim_export_geometry_plugin/: CMakeLists.txt  package.xml
rosbim_plugins/rosbim_export_geometry_plugin/launch/: export_geometry_plugin.launch.py
rosbim_plugins/rosbim_export_geometry_plugin/rosbim_export_geometry_plugin/: export_geometry_plugin.py
rosbim_plugins/rosbim_export_geometry_plugin/srv/: ExportGeometryService.srv
rosbim_plugins/rosbim_export_map_plugin/: CMakeLists.txt  ReadMe.md  package.xml  setup.py
rosbim_plugins/rosbim_export_map_plugin/launch/: export_map_plugin.launch.py
rosbim_plugins/rosbim_export_map_plugin/rosbim_export_map_plugin/: export_map_plugin.py
rosbim_plugins/rosbim_export_map_plugin/srv/: ExportMapService.srv
rosbim_rviz/: CMakeLists.txt  ReadMe.md  package.xml  plugin_description.xml
rosbim_rviz/include/: mesh.hpp  mesh_selection_handler.hpp  rosbim_display.hpp  rosbim_visual.hpp
rosbim_rviz/include/properties/: ros_service_property.hpp
rosbim_rviz/src/: mesh.cpp  mesh_selection_handler.cpp  rosbim_display.cpp  rosbim_visual.cpp
rosbim_rviz/src/properties/: ros_service_property.cpp
