<?xml version="1.0"?>
<package format="2">
  <name>rosbim</name>
  <version>1.0.0</version>
  <description>Meta-package for all ROSBIM packages</description>

  <author>Tobit Flatscher</author>
  <maintainer email="michael.terzer@fraunhofer.it">Michael Terzer</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>colcon</buildtool_depend>
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>bim_interface</exec_depend>
  <exec_depend>rosbim_example_models</exec_depend>
  <exec_depend>rosbim_gazebo_worlds</exec_depend>
  <exec_depend>rosbim_manager</exec_depend>
  <exec_depend>rosbim_manager_msgs</exec_depend>
  <exec_depend>rosbim_rviz</exec_depend>
  <exec_depend>rqt_rosbim_manager</exec_depend>

  <export>
    <metapackage />
  </export>
</package>