<?xml version="1.0"?>
<package format="2">
  <name>rosbim_example_models</name>
  <version>1.0.0</version>
  <description>ROSBIM example BIM models</description>

  <author>Tobit Flatscher</author>
  <maintainer email="michael.terzer@fraunhofer.it">Tobit Flatscher</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>