<?xml version="1.0"?>
<package format="3">
  <name>rosbim_manager_msgs</name>
  <version>1.0.0</version>
  <description>Package containing the messages for ROSBIM</description>

  <author>Tobit Flatscher</author>
  <maintainer email="michael.terzer@fraunhofer.it">Michael Terzer</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_srvs</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>