<?xml version="1.0"?>
<package format="3">
  <name>rosbim_export_geometry_plugin</name>
  <version>1.0.0</version>
  <description>ROSBIM plug-in package for exporting a geometry</description>

  <author>Tobit Flatscher</author>
  <maintainer email="michael.terzer@fraunhofer.it">Michael Terzer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>bim_interface</build_depend>
  <build_depend>python3-rospkg</build_depend>
  <build_depend>rosbim_manager_msgs</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ifcopenshell</build_depend>
  <build_export_depend>bim_interface</build_export_depend>
  <build_export_depend>python3-rospkg</build_export_depend>
  <build_export_depend>rosbim_manager_msgs</build_export_depend>
  <build_export_depend>ifcopenshell</build_export_depend>
  <build_export_depend>rclpy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>bim_interface</exec_depend>
  <exec_depend>ifcopenshell</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>rosbim_example_models</exec_depend>
  <exec_depend>rosbim_manager</exec_depend>
  <exec_depend>rosbim_manager_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>